--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3957,3 +3957,13 @@ input, select, textarea {
 			opacity: 1;
 			visibility: visible;
 		}
+
+.work-experiece-img {
+	max-height: 800px;
+	max-width: 650px;
+}
+
+.location-span {
+	float: right;
+	padding-right: 12vw;
+}
