--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2994,7 +2994,6 @@ input, select, textarea {
 				.spotlights > section > .content > .inner {
 					margin: 0 auto;
 					max-width: 100%;
-					width: 65em;
 				}
 
 			.spotlights > section:nth-child(2n) {
@@ -3398,7 +3397,7 @@ input, select, textarea {
 		background-size: cover;
 		border-bottom: 0 !important;
 		cursor: default;
-		height: 60vh;
+		height: 40vh;
 		margin-bottom: -3.25em;
 		max-height: 32em;
 		min-height: 22em;
@@ -3607,10 +3606,9 @@ input, select, textarea {
 			}
 
 			#main > * > .inner {
-				padding: 4em 0 2em 0 ;
-				margin: 0 auto;
-				max-width: 65em;
-				width: calc(100% - 6em);
+				padding: 4em 2em 2em 2em ;
+				margin: 0;
+				width: 100%;
 			}
 
 				@media screen and (max-width: 736px) {
@@ -4066,6 +4064,10 @@ input, select, textarea {
 }
 
 .iframe-loader {
-  background: url(../../images/loader2.gif) center center no-repeat;
-	max-height: 600px;
+  /* background: url(../../images/loader2.gif) center center no-repeat; */
+	height: 800px;
+}
+
+.apps-title {
+	text-align: center !important;
 }
